Move a square on the screen.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
   <head>
+    <!--<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>-->
   </head>
   <body>
     <h1>Generic RPG</h1>
     <canvas id="game" width="500" height="300">
       Canvas not supported.
     </canvas>
-    <script src="./main.js"></script>
+    <script src="build/main.js"></script>
   </body>
 </html>
+
