--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       Canvas not supported.
     </canvas>
     <script src="build/main.js"></script>
+    <script src="//localhost:35729/livereload.js"></script>
   </body>
 </html>
 
