--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
     </canvas>
     <script src="build/main.js"></script>
     <script src="//localhost:35729/livereload.js"></script>
+    <script>
+      window.requestAnimFrame = (function(){
+        return  window.requestAnimationFrame       ||
+                window.webkitRequestAnimationFrame ||
+                window.mozRequestAnimationFrame    ||
+                window.oRequestAnimationFrame      ||
+                window.msRequestAnimationFrame     ||
+                function( callback ){
+                  window.setTimeout(callback, 1000 / 60);
+                };
+      })();
+
+      window.onload = function() {
+        var game = new Game;
+        game.run();
+
+        document.onkeydown = game.onkeydown;
+      };
+    </script>
   </body>
 </html>
 
