--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <!--<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>-->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
   </head>
   <body>
     <h1>Generic RPG</h1>
