Super basic dialog box display.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,22 @@
   <head>
     <!--<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
+    <style>
+      @font-face {
+        font-family: 'manaspaceregular';
+        src: url('fonts/manaspace-webfont.eot');
+        src: url('fonts/manaspace-webfont.eot?#iefix') format('embedded-opentype'),
+             url('fonts/manaspace-webfont.woff') format('woff'),
+             url('fonts/manaspace-webfont.ttf') format('truetype'),
+             url('fonts/manaspace-webfont.svg#manaspaceregular') format('svg');
+        font-weight: normal;
+        font-style: normal;
+      }
+
+      body {
+        font-family: 'manaspaceregular';
+      }
+    </style>
   </head>
   <body>
     <h1>Generic RPG</h1>
