--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
-    <!--<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>-->
+    <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
+    <script src="src/vendor/tmx-loader.js"></script>
     <style>
       @font-face {
         font-family: 'manaspaceregular';
