--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <style>
       @font-face {
         font-family: 'manaspaceregular';
-        src: url('fonts/manaspace-webfont.eot');
-        src: url('fonts/manaspace-webfont.eot?#iefix') format('embedded-opentype'),
-             url('fonts/manaspace-webfont.woff') format('woff'),
-             url('fonts/manaspace-webfont.ttf') format('truetype'),
-             url('fonts/manaspace-webfont.svg#manaspaceregular') format('svg');
+        src: url('assets/fonts/manaspace-webfont.eot');
+        src: url('assets/fonts/manaspace-webfont.eot?#iefix') format('embedded-opentype'),
+             url('assets/fonts/manaspace-webfont.woff') format('woff'),
+             url('assets/fonts/manaspace-webfont.ttf') format('truetype'),
+             url('assets/fonts/manaspace-webfont.svg#manaspaceregular') format('svg');
         font-weight: normal;
         font-style: normal;
       }
