Basic blur effect to test glfx.js.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
     <script src="src/vendor/tmx-loader.js"></script>
+    <script src="src/vendor/glfx.js"></script>
     <style>
       @font-face {
         font-family: 'manaspaceregular';
