Use promises to handle animation flow.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
     <script src="src/vendor/tmx-loader.js"></script>
     <script src="src/vendor/glfx.js"></script>
+    <script src="src/vendor/q.js"></script>
     <style>
       @font-face {
         font-family: 'manaspaceregular';
