Get gulp build mostly working. (extensions breaking battle ATM.)

--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
         var Game = require('game');
         var game = new Game;
         game.run();
+
+        document.onkeydown = game.onkeydown;
       };
     </script>
   </body>
 </html>
-
