Get battle screen mostly working.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
       })();
 
       window.onload = function() {
+        require('extensions');
+
         var Game = require('game');
         var game = new Game;
         game.run();
